# checklints

./: Cargo.toml  README.md  TODO.md
.github/: settings.yml
checklists/: rust.toml
src/: cache.rs  cli.rs  command.rs  lib.rs  main.rs  pipe_test.rs  project.rs  settings.rs  types.rs
tests/cmd/: rust.stderr  rust.stdout  rust.toml  simple.toml
tests/cmd/rust.in/: Cargo.toml  README.md
