[package]
name = "checklints"
description = "Check repositories against toml file(s) of constraints"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "TODO"
repository = "TODO"
authors = ["Adam Gaia <git@agaia.dev>"]

[[bin]]
name = "checklist"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/pipe_test.rs"

[dependencies]
annotate-snippets = "0.11.5"
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
different = "0.3.0"
directories = "6.0.0"
env_logger = "0.11.8"
exitcode = "1.1.2"
hex = { version = "0.4.3", features = ["serde"] }
humantime = "2.2.0"
log = "0.4.27"
minijinja = { version = "2.9.0", features = ["loader"] }
pathdiff = "0.2.3"
reqwest = { version = "0.12.15", features = [
  "rustls-tls",
  "json",
  "blocking",
], default-features = false }
s-string = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sha2 = "0.10.8"
shlex = "1.3.0"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
walkdir = "2.5.0"
which = "7.0.3"
winnow = "0.7.10"
winnow-parse-error = "0.1.0"

[dev-dependencies]
trycmd = "0.15.9"
